@@ -1,57 +1,102 @@
 package ru.practicum.stats.client;
 
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.stereotype.Component;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cloud.client.ServiceInstance;
+import org.springframework.cloud.client.discovery.DiscoveryClient;
+import org.springframework.http.MediaType;
+import org.springframework.http.client.SimpleClientHttpRequestFactory;
+import org.springframework.retry.support.RetryTemplate;
 import org.springframework.web.client.RestClient;
 import ru.practicum.stats.dto.EndpointHitDto;
 import ru.practicum.stats.dto.ViewStatsDto;
+import org.springframework.web.util.UriComponentsBuilder;
 
+import java.net.URI;
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.List;
 
-@Component
+@Slf4j
 public class StatsClient {
 
     private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-    private static final ParameterizedTypeReference<List<ViewStatsDto>> STATS_LIST =
-            new ParameterizedTypeReference<>() {
-            };
 
-    private final RestClient rest;
+    private final DiscoveryClient discoveryClient;
+    private final RetryTemplate retryTemplate;
+    private final String statsServiceId;
+    private final RestClient restClient;
 
-    public StatsClient(@Value("${stats-server.url:http://localhost:9090}") String baseUrl) {
-        this.rest = RestClient.builder()
-                .baseUrl(baseUrl)
+    public StatsClient(DiscoveryClient discoveryClient,
+                       RetryTemplate retryTemplate,
+                       String statsServiceId,
+                       Duration connectTimeout,
+                       Duration readTimeout) {
+        SimpleClientHttpRequestFactory requestFactory = new SimpleClientHttpRequestFactory();
+        requestFactory.setConnectTimeout(connectTimeout);
+        requestFactory.setReadTimeout(readTimeout);
+
+        this.restClient = RestClient.builder()
+                .requestFactory(requestFactory)
+                .defaultHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
+                .defaultHeader("Accept", MediaType.APPLICATION_JSON_VALUE)
                 .build();
+        this.discoveryClient = discoveryClient;
+        this.retryTemplate = retryTemplate;
+        this.statsServiceId = statsServiceId;
     }
 
     public void hit(EndpointHitDto hit) {
-        rest.post()
-                .uri("/hit")
-                .body(hit)
-                .retrieve()
-                .toBodilessEntity();
+        try {
+            retryTemplate.execute(ctx -> restClient.post()
+                    .uri(makeUri("/hit"))
+                    .body(hit)
+                    .retrieve()
+                    .toBodilessEntity());
+        } catch (Exception e) {
+            log.warn("Не удалось отправить hit в сервис статистики: {}", e.getMessage());
+        }
     }
 
     public List<ViewStatsDto> getStats(LocalDateTime start,
                                        LocalDateTime end,
                                        List<String> uris,
                                        boolean unique) {
-        List<ViewStatsDto> body = rest.get()
-                .uri(uriBuilder -> uriBuilder
-                        .path("/stats")
-                        .queryParam("start", start.format(FORMATTER))
-                        .queryParam("end", end.format(FORMATTER))
-                        .queryParam("unique", unique)
-                        .queryParamIfPresent("uris",
-                                uris == null || uris.isEmpty() ? java.util.Optional.empty() : java.util.Optional.of(uris))
-                        .build())
-                .retrieve()
-                .body(STATS_LIST);
+        try {
+            UriComponentsBuilder builder = UriComponentsBuilder.newInstance()
+                    .path("/stats")
+                    .queryParam("start", start.format(FORMATTER))
+                    .queryParam("end", end.format(FORMATTER))
+                    .queryParam("unique", unique);
 
-        return body == null ? Collections.emptyList() : body;
+            if (uris != null && !uris.isEmpty()) {
+                uris.forEach(uri -> builder.queryParam("uris", uri));
+            }
+
+            String path = builder.build().encode().toUriString();
+            ViewStatsDto[] result = retryTemplate.execute(ctx -> restClient.get()
+                    .uri(makeUri(path))
+                    .retrieve()
+                    .body(ViewStatsDto[].class));
+            return result != null ? List.of(result) : List.of();
+        } catch (Exception e) {
+            log.warn("Не удалось получить статистику: {}", e.getMessage());
+            return List.of();
+        }
+    }
+
+    private URI makeUri(String path) {
+        ServiceInstance instance = getInstance();
+        return URI.create("http://" + instance.getHost() + ":" + instance.getPort() + path);
+    }
+
+    private ServiceInstance getInstance() {
+        List<ServiceInstance> instances = discoveryClient.getInstances(statsServiceId);
+        if (instances == null || instances.isEmpty()) {
+            throw new IllegalStateException(
+                    "Сервис статистики с id=" + statsServiceId + " не найден в Eureka");
+        }
+
+        return instances.getFirst();
     }
 }
